# sites-faciles

./: .buildpacks  .dockerignore  .env.example  .env.test  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .tool-versions  20250826002157_content_man_4524.pgsql  Aptfile  CONTRIBUTING.md  DOD.md  Dockerfile  Makefile  ONBOARDING.md  Pipfile  Procfile  README.md  README.qfdmo.md  __init__.py  apps.py  backup_20250828_114321.sql  config.json.example  cron.json.example  diff.patch  do-not-touch.txt  docker-compose-base.yml  docker-compose-production.yml  docker-compose.yml  dsfr_titres.json  entrypoint.sh  init.json  justfile  new-files.txt  package-lock.json  package.json  playwright.config.ts  publiccode.yml  pyproject.toml  requirements.txt  (+4 more)
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: _e2e.yml  cd-docker.yml  cd.yml  ci-check-i18n.yml  ci-check-migrations.yml  ci-e2e-report.yml  ci-e2e.yml  ci-main.yml  ci-pre-commit.yaml  ci-quality.yml  ci.yml  publiccode-yml-validation.yml  publish.yml  sync_databases.yml  sync_prod_to_preprod.yml
blog/: apps.py  blocks.py  managers.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0048_blogentrypage_preview_image_and_more.py  0002_alter_blogentrypage_body_alter_blogindexpage_body.py  0002_blogentrypage_blog_categories_blogentrypage_tags_and_more.py  0003_blogentrypage_date.py  0003_blogentrypage_header_color_class_and_more.py  0004_alter_blogentrypage_body_alter_blogindexpage_body.py  0004_blogentrypage_header_image.py  0005_category_locale_category_translation_key_and_more.py  0005_delete_tag_blogentrypage_header_cta_text_and_more.py  0006_alter_blogentrypage_body.py  0006_author_blogentrypage_authors.py  0006_category_colophon_alter_blogentrypage_body_and_more.py  0007_alter_blogentrypage_body.py  0007_alter_blogentrypage_body_and_more.py  0007_category_colophon_alter_author_role_and_more.py  0008_alter_blogentrypage_body.py  0008_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0009_alter_blogentrypage_body.py  0009_alter_blogentrypage_body_alter_blogindexpage_body.py  0009_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0010_alter_blogentrypage_blog_categories.py  0010_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0011_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0011_blogindexpage_posts_per_page_and_more.py  0012_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0013_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0014_alter_blogentrypage_body_alter_blogindexpage_body.py  0014_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0015_alter_blogentrypage_body_alter_blogindexpage_body.py  0016_alter_blogentrypage_body_alter_blogindexpage_body.py  0017_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0018_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0019_merge_20240618_1446.py  0020_alter_blogentrypage_body_alter_blogindexpage_body_and_more.py  0020_merge_20240618_1519.py  0021_alter_blogentrypage_body_alter_blogindexpage_body.py  0021_blogentrypage_header_cta_buttons_and_more.py  0022_blogindexpage_filter_by_author_and_more.py  0023_organization_person_organization_item.py  (+52 more)
blog/tests/: test_search.py  test_views.py
config/: api.py  settings.py  settings_test.py  urls.py  wsgi.py
config/forms/: baseform.py
content_manager/: abstract.py  apps.py  blocks.py  constants.py  context_processors.py  core.py  factories.py  managers.py  models.py  sentry.py  urls.py  utils.py  validators.py  views.py  wagtail_hooks.py  widgets.py
content_manager/blocks/: __init__.py  badges_tags.py  basics.py  buttons_links.py  cards.py  core.py  heros.py  layout.py  medias.py  related_entries.py  sections.py  tables.py  utils.py
content_manager/fixtures/: sample_2.json  sample_3.json
content_manager/migrations/: 0001_initial.py  0001_squashed_0062_catalogindexpage_preview_image_and_more.py  0002_alter_contentpage_body.py  0003_alter_contentpage_body.py  0004_alter_contentpage_body.py  0005_alter_contentpage_body.py  0005_analyticssettings.py  0006_analyticssettings.py  0007_cmsdsfrconfig.py  0008_alter_contentpage_body.py  0008_cmsdsfrconfig_theme_modale_button_and_more.py  0009_alter_contentpage_body.py  0009_cmsdsfrconfig_footer_theme_modale_and_more.py  0010_alter_contentpage_body.py  0010_rename_footer_theme_modale_cmsdsfrconfig_theme_modale_button.py  0011_cmsdsfrconfig_search_bar.py  0012_alter_contentpage_body.py  0012_formpage_alter_contentpage_options_formfield.py  0013_alter_contentpage_body.py  0018_megamenu.py  (+89 more)
customimages/: apps.py  models.py
dashboard/: apps.py  views.py  wagtail_hooks.py
db_storage/: apps.py  models.py  storage.py  urls.py  views.py
docs/: db-storage.md  git-blame-ignore-revs.md
e2e/: fixtures.ts  menu.spec.ts  test_homepage_images.spec.ts  test_images.spec.ts
events/: apps.py  forms.py  models.py
formations/: apps.py  enums.py  factories.py  form.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
forms/: apps.py  models.py  widgets.py
helm/: helmfile.yaml  helmfile.yaml.gotmpl
management/: __init__.py
menus/: apps.py  blocks.py  contants.py  models.py  views.py  wagtail_hooks.py
numerique_gouv/: abstract.py  apps.py  blocks.py  models.py  tests.py
proconnect/: apps.py  backends.py  models.py  urls.py  utils.py  validators.py  views.py  wagtail_hooks.py
scripts/: README.md  backup_local.sh  clear_local_db.sh  descend_prod_db.sh  descend_prod_medias.sh  ensure_docker.sh  local_backup.sh  local_db_clear.sh  nginx_generate_config_file.sh  post_deploy.sh  restore_db_prod.sh  restore_local_db.sh  restore_local_medias.sh  restore_prod_db.sh  restore_prod_medias.sh  restore_prod_to_preprod.sh  start.sh
sites_conformes/: README.md  pyproject.toml
sites_faciles/: .buildpacks  .dockerignore  .env.example  .env.test  .locales  .pre-commit-config.yaml  DOD.md  Dockerfile  apps.py  docker-compose.yml  entrypoint.sh  justfile  package-lock.json
templates/: 404.html  500.html  base.html  robots.txt
(+951 files in other folders)
