[project]
name = "sites-faciles"
requires-python = "<4.0,>=3.10"
version = "1.15.0"
description = "Gestionnaire de contenu permettant de créer et gérer un site internet basé sur le Système de design de l’État, accessible et responsive"
authors = [
    {name = "Sébastien Reuiller", email = "sebastien.reuiller@beta.gouv.fr"},
    {name = "Sylvain Boissel", email = "sylvain.boissel@beta.gouv.fr"}
]
maintainers = [
    {name = "Sylvain Boissel", email = "sylvain.boissel@beta.gouv.fr"}
]
readme = "README.md"
dependencies = [
    "django<6.0.0,>=5.1.4",
    "wagtail<7.0,>=6.1",
    "django-dsfr (>=2.1.0,<3.0.0)",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "python-dotenv<2.0.0,>=1.0.0",
    "dj-database-url<3.0.0,>=2.1.0",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-sass-processor<2.0,>=1.3",
    "libsass<1.0.0,>=0.22.0",
    "dj-static<1.0.0,>=0.0.6",
    "wagtailmenus<5.0,>=4.0",
    "wagtail-modeladmin<3.0.0,>=2.0.0",
    "wagtail-markdown<1.0.0,>=0.11.1",
    "unidecode<2.0.0,>=1.3.8",
    "django-storages[s3]<2.0.0,>=1.14.2",
    "boto3==1.35.99",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "django-taggit<6.0.0,>=5.0.1",
    "wagtail-localize<2.0,>=1.9",
    "icalendar<6.0.0,>=5.0.13",
    "faker<25.0.0,>=24.3.0",
    "rust-just (>=1.39.0,<2.0.0)",
    "mozilla-django-oidc (>=4.0.1,<5.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pre-commit = "^4.2.0"
djlint = "^1.36.4"
django-extensions = "^3.2.3"
ipython = "^8.18.1"
django-compressor = "^4.5.1"
django-debug-toolbar = "^5.1.0"
ruff = "^0.11.2"
tblib = "^3.0.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

extend-exclude = '''
/(
  | migrations
)/
'''

[tool.coverage.run]
omit = [
    "manage.py",
    "config/settings_test.py",
    "config/wsgi.py",
    "*/__init__.py",
    "*/migrations/*.py",
    "*/tests/*.py"
]

[tool.djlint]
max_blank_lines = 1
ignore = "H030,H031,H006,D018"
indent = 2

[tool.pyright]
reportAttributeAccessIssue = false
reportArgumentType = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportOptionalCall = false
reportOptionalMemberAccess = false
reportUnboundVariable = false

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations"
]

line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266"]
# E203: Whitespace before ':', used to please Black in `yield items[i : i + n]`
# E266: Too many leading '#' for block comment

[tool.ruff.lint.isort]
combine-as-imports = true
