[project]
name = "sites-faciles"
version = "1.18.1"
description = "Gestionnaire de contenu permettant de créer et gérer un site internet basé sur le Système de design de l’État, accessible et responsive"
authors = [
    { name = "Sébastien Reuiller", email = "sebastien.reuiller@beta.gouv.fr" },
    { name = "Sylvain Boissel", email = "sylvain.boissel@beta.gouv.fr" },
    { name = "Lucien Mollard", email = "lucien.mollard@beta.gouv.fr" },
    { name = "Lucie Laporte", email = "lucie.laporte@beta.gouv.fr" },
]
maintainers = [
    { name = "Sylvain Boissel", email = "sylvain.boissel@beta.gouv.fr" },
    { name = "Lucien Mollard", email = "lucien.mollard@beta.gouv.fr" },
    { name = "Lucie Laporte", email = "lucie.laporte@beta.gouv.fr" },
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "django-dsfr>=2.4.0",
    "django>=5.2.3",
    "wagtail>=7.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "dj-database-url>=3.0.0",
    "gunicorn>=23.0.0",
    "dj-static>=0.0.6",
    "wagtailmenus>=4.0.3",
    "wagtail-modeladmin>=2.2.0",
    "wagtail-markdown>=0.12.1",
    "unidecode>=1.4.0",
    "django-storages[s3]>=1.14.6",
    "boto3==1.35.99",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "django-taggit<6.0.0,>=5.0.1",
    "wagtail-localize<2.0,>=1.9",
    "icalendar<6.0.0,>=5.0.13",
    "faker<25.0.0,>=24.3.0",
    "rust-just (>=1.39.0,<2.0.0)",
    "mozilla-django-oidc (>=4.0.1,<5.0.0)",
    "wagtail-honeypot @ git+https://github.com/Luzzzi/wagtail-honeypot@feature/i18n-required-honeypot",
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pre-commit = "^4.2.0"
djlint = "^1.36.4"
ipython = "^8.18.1"
django-compressor = "^4.5.1"
django-debug-toolbar = "^5.1.0"
ruff = "^0.11.2"
tblib = "^3.0.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

extend-exclude = '''
/(
  | migrations
)/
'''

[tool.coverage.run]
omit = [
    "manage.py",
    "config/settings_test.py",
    "config/wsgi.py",
    "*/__init__.py",
    "*/migrations/*.py",
    "*/tests/*.py",
]

[tool.djlint]
max_blank_lines = 1
ignore = "H030,H031,H006,D018,T003"
indent = 2

[tool.pyright]
reportAttributeAccessIssue = false
reportArgumentType = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportOptionalCall = false
reportOptionalMemberAccess = false
reportUnboundVariable = false

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266"]
# E203: Whitespace before ':', used to please Black in `yield items[i : i + n]`
# E266: Too many leading '#' for block comment

[tool.ruff.lint.isort]
combine-as-imports = true
